--- a/indian-polity-economics-geography-bio-sandt-pyqs-gspluscsat-english.html
+++ b/indian-polity-economics-geography-bio-sandt-pyqs-gspluscsat-english.html
@@ -4,10 +4,9 @@
 <head>
      <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>STISkilli Ultimate PYQ Of Polity</title>
-<script src="/app-redirect.js"></script>
-<meta name="description" content="Practice STISkilli indian Polity PYQ. Premium preparation for competitive exams, government jobs & GK in India.">
-<meta name="keywords" content="Polity PYQ, Governence PYQ, Sociaty PYQ, STISkilli">
+   <title>STISkilli PYQ – Polity, Economics, Geography, Ecology & Science Previous Year Questions</title>
+<meta name="description" content="Practice STISkilli PYQ with Polity, Economics, Geography, Ecology & Biodiversity, and Science & Technology Previous Year Questions. Best preparation for UPSC, SSC, State PCS, government exams & GK in India.">
+<meta name="keywords" content="Polity PYQ, Economics PYQ, Geography PYQ, Ecology and Biodiversity PYQ, Science and Technology PYQ, Competitive Exam PYQ, UPSC PYQ, SSC PYQ, State PCS PYQ, Government Exam GK, STISkilli PYQ">
 <meta name="author" content="StiSkilli">
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 <meta name="googlebot" content="index, follow">
